# EduCrewAI

teacher_assistant/: .gitignore  README.md  pyproject.toml  requirements.txt
teacher_assistant/src/teacher_assistant/: crew.py  main.py
teacher_assistant/src/teacher_assistant/config/: agents.yaml  tasks.yaml
teacher_assistant/src/teacher_assistant/tools/: custom_tool.py
